add publish permission

--- a/app/views/albums/index.html.haml
+++ b/app/views/albums/index.html.haml
@@ -3,7 +3,7 @@
 %h3.red_color
   = image_tag(current_user.fb_profile_photo('square')) if current_user.image
   Hi #{current_user.full_name}
-%h1 List of Albums
+%h2 All Albums
 %table.table.table-striped
   - @albums.each do |album|
     %tr
