integrated mail sending functionality

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,3 +26,16 @@
 {
 	color: red;
 }
+body
+{
+	background-image: url("/assets/background.png");
+
+}
+.margin-left-30px
+{
+	margin-left: 30px;
+}
+.picture
+{
+	background: white;
+}
