--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -22,5 +22,5 @@
   = f.submit
 %br/
 %br/
-= link_to image_tag("google_logo.jpg", :height => '70px', :width => '70px'), google_signin_path
-= link_to image_tag("facebook.jpg", :height => '80px', :width => '80px'),'/auth/facebook'
+= link_to image_tag("google_logo.jpg", :height => '80px', :width => '70px'), google_signin_path
+= link_to image_tag("facebook.jpg", :height => '80px', :width => '80px'),'/auth/facebook', :class => "margin-left-30px"
